--- a/src/styles/logout.scss
+++ b/src/styles/logout.scss
@@ -1,6 +1,6 @@
 // Variables
 $gray-200: #e5e7eb;
-$gray-500: #6b7280;
+$gray-100: #6b7280;
 $blue-400: #60a5fa;
 $white: #ffffff;
 
@@ -28,7 +28,7 @@ $white: #ffffff;
     background-color: $gray-200;
     border-radius: 0.5rem;
 
-    color: $gray-500;
+    color: $gray-100;
 
     &:hover {
       background-color: $blue-400;
@@ -36,7 +36,8 @@ $white: #ffffff;
     }
 
     .logout-text {
-      font-size: 0.875rem;
+      font-size: 1rem;
+      text-shadow: black;
       margin-right: 0.75rem;
       margin-left: 0.75rem;
     }
