--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,8 +1,8 @@
 // Variables
 $gray-200: #e5e7eb;
-$gray-500: #6b7280;
-$blue-800: #1e40af;
-$blue-400: #60a5fa;
+$gray-100: #6b7280;
+$blue-800: #004381;
+$blue-400: #3f4d70;
 $white: #ffffff;
 
 // Mixins
@@ -32,7 +32,7 @@ $white: #ffffff;
   background-color: $white;
   border-radius: 0.125rem;
   border: 1px solid $gray-200;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px -1px rgba(119, 119, 119, 0.1);
 }
 
 .sidebar-menu {
@@ -49,7 +49,7 @@ $white: #ffffff;
   
   height: 3rem;
   padding: 0 1rem;
-  color: $gray-500;
+  color: $gray-100;
   font-weight: 500;
   border-radius: 0.5rem;
   text-decoration: none;
@@ -59,11 +59,13 @@ $white: #ffffff;
     width: 1.25rem;
     height: 1.25rem;
     margin-right: 0.75rem;
+    transition: none;
   }
   
   .menu-text {
     font-size: 0.875rem;
     flex: 1;
+    
   }
   
   .menu-arrow {
